Apply R1-R9 cascade audit fixes
R1: Promote CascadeCompletedStep to top-level public record; remove inner
record from CascadeContext; update CascadeFinalizeEvent and tests.
R2: Deliver messages to non-starter scope members immediately when starter
is in cascade (QuestStartMessageListener starterDeferred flag).
R3: SoundRewardType/TitleRewardType type-safe field parsing with instanceof
guards and try/catch around grant().
R4: Wrap delivery + summary in try/catch in finalizeCascade so
CascadeFinalizeEvent always fires; set CascadeOutcome.ERROR on exception.
R5: CascadeContext.getDeferredMessagesFor returns unmodifiable list.
R6: Add missing assertions to two abandonChain tests in QuestChainManagerTest.
R7: Fix @Test/@DisplayName annotation order in three test classes.
R8: Add Player field to CascadeStartEvent for consistency with sibling events.
R9: Add CascadeOutcome enum to CascadeFinalizeEvent.